# cpp-test-generator-Keploy-API-Fellowship

./: .gitignore  CMakeLists.txt  README.md  report.md  test_main_cpp.diff
input/: main.cpp
prompts/: fix_build_prompt.yaml  generate_prompt.yaml  refine_prompt.yaml
scripts/: build_and_test.bat  cli.py
scripts/fix/: fix_build_errors.py
scripts/generate/: generate_tests.py  refine_tests.py
tests/: test_main.cpp
